codigo html base 2

--- a/fale.html
+++ b/fale.html
@@ -22,7 +22,10 @@
                 </li>
               </ul>
 
-
+<h1 class="aa">Entre em contato conosco</h1>
+<p>Gmail: <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">GitFilmes@gmail.com</a> </p>
+<p>Facebook: <a href="https://pt-br.facebook.com/"> @GitFilmes</a> </p>
+<p>Instagram: <a href="https://www.instagram.com/">@GitFilmes</a> </p>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
