criação de paginas em html a fim de curiosidades sobre os filmes

--- a/formulario.html
+++ b/formulario.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <form  name="formuser" action="INDEX.HTML">
+    <form  name="formuser" action="index.html">
         <div class="form-group">
             <label for="examplenome">Nome</label>
             <input type="text" name="Nome" class="form-control" id="examplenome" aria-describedby="emailHelp"
