--- a/cadastro.html
+++ b/cadastro.html
@@ -29,7 +29,7 @@
         </div>
         <br>
         <div class="form-group">
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            <input type="text" class="form-control" id="exampleInputName" aria-describedby="NameHelp"
                 placeholder="Nome de Usuário">
         </div>
         <br>
@@ -38,7 +38,11 @@
             <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
         </div>
        
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        <button type="submit" class="btn btn-primary">
+
+           <a href="lista.html">Enviar</a>
+
+        </button>
     </form>
 </body>
 
