--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
         </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        <button type="submit" class="btn btn-primary">
+             <a href="lista.html">Entar </a>
+        </button>
         <br>
         <p class="letra">Suas informações nunca serão compartilhadas.</p>
     </form>
