--- a/lista.html
+++ b/lista.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/estilo/estilo.css">
     <script src="assets/js/app.js"></script>
     <title>Cineteca-ListaDeFilmes</title>
+
 </head>
 <div class="container">
     <div class="row">
@@ -25,7 +26,7 @@
         </div>
     </div>
 </div>
-
+<li><a href="lista.html">Enviar</a></li>
 
 
 <body>
