--- a/index.html
+++ b/index.html
@@ -1,78 +1,73 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
+
 <html lang="en">
-=======
 <html lang="pt-br">
 
->>>>>>> d03f6fc0a441583c8a01e19ba56b57af6b061e95
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<<<<<<< HEAD
+
     <title>www.GitFilmes.com</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/estilo.css">
-
-</head>
-<body>
-        <ul class="nav nav-tabs">
-                <li class="nav-item">
-                  <a class="nav-link active" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="login.html"> Login</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="fale.html">Fale conosco</a>
-                </li>
-              </ul>
-
-<h1 class="aa"> olá</h1>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
-=======
-    <title>Cineteca</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/estilo.css">
 
 </head>
 
 <body>
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" href="index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="login.html"> Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="fale.html">Fale conosco</a>
+        </li>
+    </ul>
 
-    <img src="assets/image/logotipo-cinema.jpg" class="logoCinema" alt="">
-    <br>
-    <form>
-        <div class="form-group">
-            <label for="exampleInputEmail1" class="letra"  class="linha">Endereço de Email ou Nome de usuário e Senha</label>
-            <br>
-            <input type="email, text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="email ou Nome de usuário">
-        </div>
-        <br>
-        <div class="form-group">
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-        </div>
-        <br>
-        <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
-        <br>
-        <p class="letra">Suas informações nunca serão compartilhadas.</p>
-    </form>
+    <div class="margin20 ">
+        <h1 class="fontsizelg ">Cineteca</h1>
+        <p class="titulo ">click <a href="lista.html">aqui</a>  para ver nossa lista de filmes</p>
+    </div>
 
-    <br>
-    <br>
-     <p class="letra2" class="linha">Se não tem uma conta cadastre-se em nosso site!!</p>
-    <button onclick="1" class="cor">
-        <a href="cadastro.html"> Cadastrar</a>
+    <div class="container ">
+        <div class="row skew ">
+            <img src="assets/images/norbit.jpg " alt=" ">
+            <h1>norbit</h1>
+            <p><a href="# ">Informações sobre o filme</a></p>
+        </div>
 
-    </button>
+        <div class="row skew ">
+            <img src="assets/images/rango4.jpg " alt=" ">
+            <h1>Rango</h1>
+            <p><a href="rango.html"> Informações sobre o filme</a></p>
+        </div>
+
+        <div class="row skew ">
+            <img src="assets/images/gente grande3.jpg " alt=" ">
+            <h1>Gente Grande</h1>
+            <p><a href="# ">Informações sobre o filme</a></p>
+        </div>
+        <div class="row skew ">
+            <img src="assets/images/gente grande4.jpg " alt=" ">
+            <h1>Gente Grande 2</h1>
+            <p><a href="# ">Link da notícia</a></p>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
->>>>>>> d03f6fc0a441583c8a01e19ba56b57af6b061e95
 </html>
