--- a/lista.html
+++ b/lista.html
@@ -6,16 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/estilo/estilo.css">
+    <link rel="stylesheet" href="assets/css/estilo.css">
     <script src="assets/js/app.js"></script>
     <title>Cineteca-ListaDeFilmes</title>
 </head>
+
+<body>
+
+<ul class="nav nav-tabs">
+    <li class="nav-item">
+        <a class="nav-link active" href="index.html">Inicio</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="login.html"> Login</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="fale.html">Fale conosco</a>
+    </li>
+</ul>
+
 <div class="container">
     <div class="row">
         <div class="col col-12">
-            <h1 class="title">Cineteca</h1>
-            <li class="cc">Bem vindo(a) a cineteca show</li>
-            <h2 class="cc">Lista de filmes</h2>
+           
+            <h1 class="cc">Lista de filmes</h1>
             <h1 class="title">Norbit</h1>
             <p><img class="img row swek" src="assets/images/norbit.jpg" alt="Filme Norbit"></p>
             <h1 class="title">Rango</h1>
@@ -28,7 +42,7 @@
 
 
 
-<body>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
